trying to fix font on mobile

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -44,7 +44,7 @@ body {
   }
 
   .calendar {
-    width : 67%;
+    width : 64%;
     margin: 0 auto;
   }
 }
@@ -129,6 +129,8 @@ body {
 
   .cardCont {
     .card {
+      font-family: "SpaceMeatballRegular";
+
       .cardImg {
         width: 330px;
       }
@@ -153,6 +155,8 @@ body {
 
   .cardCont {
     .card {
+      font-family: "SpaceMeatballRegular";
+
       .cardImg {
         width: 300px;
       }
